# autograph

./: .dockerignore  .gitignore  .golangci.yaml  .golangci.yml  .travis.yml  Dockerfile  Dockerfile.monitor  Makefile  README.md  ant-designs?organization=oscarg933&organization=oscarg933  authorize.go  authorize_test.go  autograph.encrypted.yaml  autograph.softhsm.yaml  autograph.testsignapk.yaml  autograph.yaml  compose-config-test.yaml  context.go  digest.go  digest_test.go  docker-compose.override.yml.example  docker-compose.yml  encoders.go  encoders_test.go  errors.go  go.mod  go.sum  handlers.go  handlers_racing_test.go  handlers_test.go  id.go  id_test.go  lock.json  logging.go  main.go  main_racing_test.go  main_test.go  manifest.json  memory_backend.go  middleware.go  (+15 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-monitor.yaml  deploy.yaml  integration-tests.yaml  tests.yaml
crypto11/: aead.go  block.go  blockmode.go  common.go  crypto11.go  crypto11_test.go  dsa.go  ecdsa.go  hmac.go  rsa.go  sessions.go
database/: Dockerfile  README.md  auths.sql  connect.go  connect_test.go  generate-test-certs.sh  queries.go  queries_auths_test.go  queries_test.go  root.crt  root.csr  root.key  schema.sql  server.crt  server.csr  server.key  unittest-setup.sql
database/migrations/: 1573238040_init.up.sql  1573238043_create_signers.down.sql  1573238043_create_signers.up.sql  1573238052_create_hawk_credentials.down.sql  1573238052_create_hawk_credentials.up.sql  1573238059_create_authorizations.down.sql  1573238059_create_authorizations.up.sql  1573238336_grant_authgraphdbuser_select_on_signers_hawk_credentials_and_authorizations.down.sql  1573238336_grant_authgraphdbuser_select_on_signers_hawk_credentials_and_authorizations.up.sql  1573486912_create_auth_admin_role.down.sql  1573486912_create_auth_admin_role.up.sql  1573488968_grant_authgraphdbauthadmin_select_insert_update_delete_on_signers_hawk_credentials_and_authorizations.down.sql  1573488968_grant_authgraphdbauthadmin_select_insert_update_delete_on_signers_hawk_credentials_and_authorizations.up.sql
docs/: architecture.md  architecture.rst  configuration.md  configuration.rst  endpoints.md  endpoints.rst  hsm.md  hsm.rst  troubleshooting.md  troubleshooting.rst
docs/statics/: ContentSignaturePKI.mermaid  a-h-s.dot  test.addons.signing.root.ca.crt
formats/: auth.go  auth_test.go  rest.go  signer.go  signer_test.go
internal/mockpkcs11/: context.go
internal/mockstatsd/: clientinterface.go
signer/: entropy_test.go  hsm.go  hsm_test.go  signer.go  signer_test.go
signer/apk/: README.rst  apk.go  apk_test.go  jar.go  jar_test.go  one-unaligned-file.apk
signer/apk2/: README.md  README.rst  aligned-two-files.apk  apk2.go  apk2_test.go
signer/contentsignature/: README.md  README.rst  contentsignature.go  contentsignature_test.go  signature.go
signer/contentsignature-pki/: README.rst  contentsignature.go  contentsignature_test.go  signature.go
signer/contentsignaturepki/: README.md  README.rst  contentsignature.go  contentsignature_test.go  signature.go  upload.go  upload_test.go  x509.go
signer/genericrsa/: README.md  README.rst  rsa.go  rsa_racing_test.go  rsa_test.go
signer/gpg2/: README.md  README.rst  gpg2.go  gpg2_test.go
signer/mar/: README.md  README.rst  mar.go  mar_test.go  parser.go
signer/pgp/: README.rst  pgp.go  pgp_test.go
signer/pgpcli/: pgpcli.go  pgpcli_test.go
signer/rsapss/: README.rst  rsapss.go  rsapss_test.go
signer/widevine/: README.rst  widevine.go  widevine_test.go
signer/xpi/: README.md  README.rst  cose.go  cose_test.go  jar.go  jar_test.go  omnija_bench_test.go  recommendation.go  recommendation_test.go  x509.go  x509_test.go  xpi.go  xpi_test.go
tools/: inotify_make.sh
tools/android-store/: Makefile  README.md  gen-apk-key.sh  start-container-shell.sh
tools/autograph-client/: build_test_apks.sh  build_test_gpg.sh  build_test_xpis.sh  client.go  dev-ext-ecdsa-expired-root.pem  dev-ext-ecdsa-root.pem  dev-webext-rsa-root.pem  integration-tests.yml  integration_test_api.sh  integration_test_gpg2_signer.sh  integration_test_monitor.sh  integration_test_xpis.sh  test-entrypoint.sh
tools/autograph-client-python/: client.py
tools/autograph-edge/: Makefile  README.md  (+5 more)
tools/config-sanitizer/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  sanitize-config.py  setup.cfg
tools/config-sanitizer/autograph-config-sanitizer/: README.md  pyproject.toml
tools/config-sanitizer/autograph-config-sanitizer/.github/workflows/: test.yml
tools/config-sanitizer/autograph-config-sanitizer/src/autograph_config_sanitizer/: __main__.py
tools/config-sanitizer/src/autograph_config_sanitizer/: __about__.py  __init__.py  __main__.py
tools/config-sanitizer/src/autograph_config_sanitizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+119 files in other folders)
