[metadata]
name = autograph_config_sanitizer
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = true
zip_safe = true
install_requires =
    # List runtime dependencies in the same format as in the requirements.txt file
    PyYAML
    pydantic
    cryptography

[options.extras_require]
# List of optional runtime dependencies

[options.packages.find]
where = src

[options.package_data]
# * = **/*.json, **/*.txt     # Uncomment if your package comes with any JSON or TXT files you'd like to bundle
# You can list your package data files here.
